# Newsletter-Generation-App-Using-Multiple-Agents-Crew-AI-and-Langchain-

./: README.md
newsletter_gen/: README.md  pyproject.toml
newsletter_gen/src/newsletter_gen/: crew.py  main.py
newsletter_gen/src/newsletter_gen/config/: agents.yaml  newsletter_template.html  tasks.yaml
newsletter_gen/src/newsletter_gen/tools/: custom_tool.py
