[tool.poetry]
name = "newsletter_gen"
version = "0.1.0"
description = "newsletter-gen using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}

[tool.poetry.scripts]
newsletter_gen = "newsletter_gen.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"